# pcmg

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  Trunk.toml  design-notes.md  empty.yml  index.html  localhost.pem  log.rs  module.yml  module2.yml  module3.yml  pmodule.yml  portandknob.yml  prefabs.yaml  serve-https.py
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
assets/: manifest.json  pcmg.xcf  sw.js  ww.js
pcmg/: Cargo.toml  Trunk.toml  index.html
pcmg/src/: consts.rs  lib.rs  pcmg_ui.rs
pcmg/src/types/: mod.rs
prefab_modules/: adsr.yml  control.yml  fellers.yml  float.yml  gate.yml  gigas1.yml  m1.yml  manual_adsr.yml  megatest.yml  midi.yml  midiminimoe.yml  mm1.yml  mod1.yml  mod2.yml  monoknob.yml  moogger.yml  moogsimple.yml  mrmixtastik.yml  o1.yml  osc2.yml  osc2nomidi.yml  sequencer.yml  simple_adsr.yml  simpleout.yml  u12i2o.yml  u1i1.yml  u1io.yml  u1k1.yml  u1k3.yml  u1sso.yml  u2k2.yml  wtest.yml
prefabs/: 1.yml  buttontoggle.yml  knob.yml  knobby.yml  pointy.yml  port.yml  prefabs.yml
rack/: Cargo.toml
rack-designer/: Cargo.toml  TUTORIAL.md  Trunk.toml  index.html
rack-designer/src/: app.rs  main.rs  saveload.rs
rack-designer/src/app/: adder.rs  state.rs
rack-designer/src/app/state/: widget_editor.rs
rack-loaders/: Cargo.toml
rack-loaders/src/: assetloader.rs  lib.rs  saveloaders.rs
rack/src/: app.rs  container.rs  devices.rs  graph.rs  lib.rs  module_description.rs  templates.rs  visuals.rs  widget_description.rs  widgets.rs
rack/src/app/: adder.rs
rack/src/container/: module.rs  sizing.rs
rack/src/devices/: description.rs  impls.rs
rack/src/devices/impls/: adsr.rs  generators.rs  mixers.rs  sequencer.rs
rack/src/graph/: compiled.rs  modules.rs  nodes.rs
rack/src/templates/: visuals.rs
rack/src/visuals/: templates.rs
rack/src/widget_description/: visuals.rs
rack/src/widgets/: connector.rs  fader.rs  knob.rs  scope.rs  toggle.rs
rack/src/widgets/connector/: in_port.rs  out_port.rs  ports.rs
src/: compiled_graph.rs  consts.rs  devices.rs  graph.rs  lib.rs  live_output.rs  main.rs  pcmg_ui.rs  trakparse.rs  types.rs  utils.rs  wasm_thread.rs  waves.rs  widgets.rs
src/devices/: filters.rs  mixers.rs
src/pcmg_ui/: module_adder.rs
src/types/: adsr.rs  errors.rs  filters.rs  fused.rs  generators.rs  hz.rs  lfo.rs  mod.rs  note.rs  wave.rs  write_wave.rs
src/widgets/: fader.rs  knob.rs
