[workspace]
members = [".", "rack", "rack-designer"]

[package]
name = "pcmg"
version = "0.1.0"
authors = ["John Dowson <dowson.john.pony@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rack = { path = "./rack" }
anyhow = "1.0"
eframe = "0.24"
fusebox = "0.8"
midir = "0.9"
wmidi = "4.0"
num-traits = "0.2"
rand = "0.8"
thiserror = "1.0"
slotmap = "1.0"
serde = "1.0.184"
serde_yaml = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = { version = "0.15", default-features = false, features = ["num-traits"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.15", default-features = false, features = [
    "num-traits",
    "wasm-bindgen",
] }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Worker",
    "WorkerOptions",
    "WorkerType",
] }
js-sys = "0.3"
getrandom = { version = "*", features = ["js"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
