[workspace]
members = ["pcmg", "rack", "rack-designer", "rack-loaders"]
resolver = "2"
package.edition = "2024"
default-members = ["pcmg"]

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
eframe = { version = "0.27", features = ["serde"] }
emath = { version = "0.27", features = ["serde"] }
egui = { version = "0.27", features = ["serde"] }
egui_plot = "0.27"
serde = "1.0.193"
serde_yaml = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
wmidi = "4.0"
log = "0.4"
slotmap = "1.0"
