[package]
name = "rack-designer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rack = { path = "../rack" }
eframe = { version = "0.24", features = ["serde"] }
emath = { version = "0.24", features = ["serde"] }
egui = { version = "0.24", features = ["serde"] }
rfd = "0.12"
serde = "1.0.184"
serde_yaml = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
log = "0.4"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [] }
js-sys = "0.3"
getrandom = { version = "*", features = ["js"] }
wasm-bindgen = "0.2"
console_log = "*"
