[package]
name = "rack-designer"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rack = { path = "../rack" }
rack-loaders = { path = "../rack-loaders" }
log.workspace = true
futures = "0.3"
eframe.workspace = true
emath.workspace = true
egui.workspace = true
serde.workspace = true
serde_yaml.workspace = true
uuid.workspace = true


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
getrandom = { version = "*", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [] }
js-sys = "0.3"
console_log = "1.0"
rust-embed = { version = "8.1", features = ["debug-embed"] }
