[package]
name = "rack-loaders"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minicbor-ser = "0.2"
log = "0.4"
url = "2.5"
base64 = "0.21"
rack = { path = "../rack" }
rfd = { version = "0.12", default-features = false, features = ["xdg-portal"] }
eframe.workspace = true
emath.workspace = true
egui.workspace = true
serde.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
futures = "0.3"
lz4_flex = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rust-embed = "8.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location"] }
js-sys = "0.3"
console_log = "1.0"
rust-embed = { version = "8.1", features = ["debug-embed"] }
