[package]
name = "rack"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe.workspace = true
emath.workspace = true
egui.workspace = true
serde.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
quadtree_rs = "0.1"
itertools = "0.12"
slotmap.workspace = true
wmidi.workspace = true
num = "*"
